kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: my-spring-boot-app-82236720:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: my-pvc
              mountPath: /app/data
      volumes:
        - name: my-pvc
          persistentVolumeClaim:
            claimName: my-app-pvc
